# xcalbuild

./: .gitignore  CI.Jenkinsfile  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  Mac.Jenkinsfile  README.md
docs/design/: Build-Processor.md  Build-Spec.md  Design.md  IO.md  Infrastructure.md  Prober.md  Profile-Provider.md  Python-Xcalbuild-Functionality.md  Tests.md  Tracer.md  Work-Item-Processor.md
docs/user/: Profile-Spec.md  User.md
include/: __xvsa_common.h
profiles/: CMakeLists.txt
profiles/arm-gcc/: CMakeLists.txt  arm-gcc.json  arm-gcc.test.json  profile.json
profiles/clang/: CMakeLists.txt  clang.json  clang.test.json  profile.json
profiles/gnu/: CMakeLists.txt  ar.json  ar.test.json  as.json  as.test.json  cc1.json  cc1.test.json  gnu_cxx_preinclude.h  ld.json  ld.test.json  profile.json
profiles/gnu-cc/: CMakeLists.txt  gcc.json  gcc.test.json  profile.json
profiles/iar/: CMakeLists.txt  iarchive.json  iarchive.test.json  iasmarm.json  iasmarm.test.json  iccarm.json  iccarm.test.json  ilink.json  ilink.test.json  profile.json
profiles/keil/: CMakeLists.txt  armar.json  armar.test.json  armasm.json  armasm.test.json  armcc.json  armcc.test.json  armcc_preinclude.h  armlink.json  armlink.test.json  profile.json
profiles/windows-auto/: profile.json
scripts/test/: analyse-preprocessed.sh  build-windows-projects.ps1  ci-run-all-projects.sh  ci-run-one-project.sh  get-token.py  run-builtin-tests.sh  run-project.ps1  run-project.sh  run-xvsa.sh  xvsa-for-windows.sh
src/: CMakeLists.txt
src/build-processor/: CMakeLists.txt  build-processor.cpp  build-processor.hpp  build-processor.test.cpp
src/include/: config.h.in  error-code.hpp  fwd.hpp
src/linux/: CMakeLists.txt  config
src/linux/bear/: CMakeLists.txt
src/linux/bear/src/: CMakeLists.txt  config.h.in  environ.c  execs.c  json.c  json.h  main.c  output.c  output.h  protocol.c  protocol.h  stringarray.c  stringarray.h
src/linux/bear/test/: CMakeLists.txt
src/linux/bear/test/unit_test/: main.c
src/prober/: CMakeLists.txt  prober.cpp  prober.hpp  prober.test.cpp
src/profile/: CMakeLists.txt  option.cpp  option.hpp  parsed-work-item.cpp  parsed-work-item.hpp  profile-tester.cpp  tool-profile.cpp  tool-profile.hpp  toolchain-profile.cpp  toolchain-profile.hpp  toolchain-profile.test.cpp  validation.cpp  validation.hpp
src/tracer/: CMakeLists.txt  tracer.cpp  tracer.hpp  tracer.test.cpp
src/utils/: CMakeLists.txt  archive.cpp  archive.hpp  checksum.cpp  checksum.hpp  logger.cpp  logger.hpp  path.cpp  path.hpp  profiler.cpp  profiler.hpp  utils.test.cpp
src/windows/: CMakeLists.txt  compiler-config.cpp  compiler-config.hpp  compiler-input.test.json  main.cpp  win-tracer.cpp  win-tracer.hpp  win-tracer.test.cpp
src/work-item-processor/: CMakeLists.txt  work-item-processor.cpp  work-item-processor.hpp  work-item-processor.test.cpp
src/xcalbuild/: CMakeLists.txt  command-line.cpp  command-line.hpp  command-line.test.cpp  main.cpp
tests/features/: CMakeLists.txt
tests/features/auto-detect-profile/: CMakeLists.txt  Makefile  test.sh
tests/features/duplicated-link-target-name/: CMakeLists.txt  Makefile  test.sh
tests/features/duplicated-link-target-name/a/: Makefile  a.c
tests/features/duplicated-link-target-name/b/: Makefile  a.c  b.c
tests/features/duplicated-link-target-name/c/: Makefile  a.c  b.c  c.c
tests/features/gcc-multi-source/: CMakeLists.txt  Makefile  test.sh
tests/features/probe-macros/: CMakeLists.txt  Makefile  test.sh
tests/features/profile-tester/: CMakeLists.txt  bad-tests.json  invalid-profile.json  profile.json  test.sh  tests.json
tests/features/track-include-deps/: CMakeLists.txt  Makefile  a.c  b.h  test.sh
tests/features/xcalbuild-command-line/: CMakeLists.txt  test.sh
tests/features/xcalbuild-command-line/profiles/gnu/: gcc.json  profile.json
tests/features/xcalbuild-command-line/profiles/linux-auto/: profile.json
tests/projects/bazel-examples/: Dockerfile  build-cmd  configure.sh  env.sh  prebuild-cmd
tests/projects/cmake/: Dockerfile  configure.sh  env.sh
tests/projects/gdb/: Dockerfile  env.sh  image.conf
tests/projects/json-c/: Dockerfile  env.sh
tests/projects/linkit-sdk/: Dockerfile  build-cmd  env.sh  prebuild-cmd
tests/projects/openssl/: Dockerfile  configure.sh  env.sh
tests/projects/rt-thread/: Dockerfile  build-cmd  configure.sh  env.sh  prebuild-cmd
tests/win-projects/cmsis/: build-cmd  configure.ps1
tests/win-projects/rt-thread/: build-cmd  configure.ps1  source-dir
tests/win-projects/samsung-pio/: build-cmd  configure.ps1
